[package]
name = "or-iterator"
version = "0.1.0"
authors = ["Taehoon Moon <panarch@kaist.ac.kr>"]
edition = "2018"
description = "Rust iterator which takes two iterators and returns non-empty one"
readme = "README.md"
repository = "https://github.com/panarch/or-iterator"
license = "MIT"
license-file = "LICENSE"
keywords = ["iterator", "or", "lazy"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
